<resources>
    <string name="app_name">PathFinder</string>
    <string name="splash">Welcome to PathFinder!</string>
    <string name="version">Version 1.0</string>
    <string name="btn_org">Organisation</string>
    <string name="btn_scan">Scan QR code</string>
    <string name="btn_contact">contact us</string>
    <string name="btn_map">Update Maps:</string>
    <string name="btn_path_finder">Path:</string>
    <string name="instructions_org">Instructions to use:\nYou must first update the organisations by clicking on the update org button,\nyou must then select an appropriate Organisation and Organisation building,\nall buildings will have there Organisations name shorted in there name,\nonce you have selected both options from the drop down click the update map button. </string>
    <string name="start_text">Select Location</string>
    <string name="Select">Select Destination</string>
    <string name="start_path">Start Path</string>
    <string name="current_dest">Starting Location</string>
    <string name="next_dest">Final Destination</string>
    <string name="path_info_message">Path Information</string>
    <string name="display_information"> Directions</string>
    <string name="updated">The Map Has Been Updated</string>
    <string name="select_organisation">Select Organisation</string>
    <string name="select_building">Select Building</string>
    <string name="btn_update_map">Update Map</string>
    <string name="btn_update_org">Update Org</string>
    <string name="updated_org">The Organisation have been updated</string>
    <string name="network_access">Network Access Application</string>
    <string name="button_text">Visit our Website</string>
    <string name="hint">PathFinder</string>
    <string name="contact_display_message">Thank you for Visiting PathFinder,\n
        If you need to contact us send us an email at PathFinder@gmail.com or vist us at our website.</string>
    <string name="btn_wipe_info">Wipe Details</string>
    <string name="path_instructions">Instructions:\n\nYou must select 1 item on each drop down,\nif you are unsure of your current location use the scanner to find your location,\nOnce both drop downs have items selected press the Start Path Button</string>


</resources>
