<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#99B3E6"
    tools:context=".ContactActivity">


    <LinearLayout
        android:padding="10px"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5px"
            android:text="@string/contact_display_message" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/hint"
            android:inputType="textUri"
            android:text="https://pathsearcher.azurewebsites.net/"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="22dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onButtonClicked"
            android:text="@string/button_text"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="-38dp" />

        <WebView
            android:id="@+id/webView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="190dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
