<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99B3E6"
    tools:context=".MenuActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="406dp"
        android:layout_height="115dp"
        android:cropToPadding="false"
        android:fitsSystemWindows="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_org"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bn_header" />

    <Button
        android:id="@+id/btn_org"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/btn_org"
        app:layout_constraintBottom_toTopOf="@+id/btn_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/btn_contact"
        app:layout_constraintBottom_toTopOf="@+id/btn_path_finder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_path_finder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"
        android:gravity="center"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/btn_path_finder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
